--- a/index.html
+++ b/index.html
@@ -16,18 +16,14 @@
   <link rel="canonical" href="http://ramc.dev/">
   <!-- <link rel="alternate" type="application/rss+xml" title="RSS Feed for Ramachandran" href="/feed.xml" /> -->
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-150917947-1"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DSZL0BB4L0"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-150917947-1');
+    gtag('config', 'G-DSZL0BB4L0');
   </script>
 
   <link rel="stylesheet" href="/assets/css/styles.css" type="text/css">
